--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,43 +33,31 @@
     <div class="card my-4 mx-auto">
       <div class="card-body m-2 m-md-4">
         <article class="row">
-          <div class="col-5"><img src="../static/pict 1.png" class="img-fluid" alt=""></div>
+          <div class="col-5"><img src="{{ teacher.picture }}" class="img-fluid" alt=""></div>
           <div class="col-7">
 
             <section class="teacher=info">
 
-              <h1 class="h2">Morris Simmmons</h1>
-              <p><span class="badge badge-secondary mr-2">Для путешествий </span>Рейтинг: 4.8 Ставка: 1200 / час</p>
-              <p>Native English language teacherHi Everyone! My name is Richard; I am a native English speaker. I was born in South Africa, Spent 12 years living in the UK and am now living in Spain. I have a degree in food science, a TEFL certificate and a level 3 in training and education. I worked in cheese manufacturing for many years and have good knowledge of dairy production and food safety topics.</p>
+              <h1 class="h2">{{ teacher.name }}</h1>
+              <p>{% for g in goals %}<span class="badge badge-secondary mr-2">{{ g }} </span>{% endfor %}Рейтинг: {{ teacher.rating }} Ставка: {{ teacher.price }} / час</p>
+              <p>{{ teacher.about }}</p>
 
             </section>
 
             <section class="available">
-
-              <h4 class="mb-4 mt-5">Записаться на пробный урок</h4>
-
-              <h6 class="mt-4">Понедельник</h6>
-              <a href="#" class="btn btn-outline-success mr-2">12:00 свободно</a>
-              <a href="#" class="btn btn-outline-success  mr-2">14:00 свободно</a>
-
-              <h6 class="mt-4">Вторник</h6>
-              <a href="#" class="btn btn-outline-success  mr-2">14:00 свободно</a>
-              <a href="#" class="btn btn-outline-success  mr-2">16:00 свободно</a>
-
-              <h6 class="mt-4">Среда</h6>
-              <a href="#" class="btn btn-outline-success  mr-2">14:00 свободно</a>
-              <a href="#" class="btn btn-outline-success  mr-2">16:00 свободно</a>
-              <a href="#" class="btn btn-outline-success  mr-2">18:00 свободно</a>
-
-              <h6 class="mt-4">Четверг</h6>
-
-              <p>Нет свободных уроков</p>
-
-              <h6 class="mt-4">Пятница</h6>
-              <a href="#" class="btn btn-outline-success  mr-2">14:00 свободно</a>
-              <a href="#" class="btn btn-outline-success  mr-2">16:00 свободно</a>
-              <a href="#" class="btn btn-outline-success  mr-2">18:00 свободно</a>
-
+                <h4 class="mb-4 mt-5">Записаться на пробный урок</h4>
+                {% for day_of_the_week_key,day_of_the_week_value in week.items() %}
+                <h6 class="mt-4">{{ day_of_the_week_value }}</h6>
+                    {% for k,v in teacher.free[day_of_the_week_key].items() %}
+                        {% if v == True %}
+                            {% set time = k.split(':')[0] %}
+                        <a href="/booking/{{ teacher.id }}/{{ day_of_the_week_key }}/{{ time }}/" class="btn btn-outline-success mr-2">{{ k }} свободно</a>
+                        {% endif %}
+                    {% endfor %}
+                    {% if (teacher.free[day_of_the_week_key].values() | sum ) == 0 %}
+                        <p>Нет свободных уроков</p>
+                    {% endif %}
+                {% endfor %}
             </section>
 
           </div>
