--- a/templates/goal.html
+++ b/templates/goal.html
@@ -30,7 +30,7 @@
     </nav>
   </header>
   <main class="container mt-3">
-    <h1 class="h1 text-center w-50 mx-auto mt-1 py-5 mb-4"><strong>🚜<br />Преподаватели <br>  {{ goals[goal] | lower }}</strong></h1>
+    <h1 class="h1 text-center w-50 mx-auto mt-1 py-5 mb-4"><strong> {{ goals[goal][-1] }}<br />Преподаватели <br>  {{ goals[goal][:-1] | lower }}</strong></h1>
       <div class="row">
       <div class="col-12 col-lg-10 offset-lg-1 m-auto">
           {% for teacher in (teachers|sort(attribute="rating", reverse=True)) %}
